--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "react-native-simple-crypto",
   "version": "0.2.15",
-  "description": "A simpler React-Native crypto library",
+  "description": "A simpler React-Native crypto library. Based on ghbutton/react-native-simple-crypto",
   "main": "index.js",
-  "author": "Gary Button <gary.button.public@gmail.com>",
-  "homepage": "https://github.com/ghbutton/react-native-simple-crypto",
+  "author": "Cuong Do <cuong9altv@gmail.com>",
+  "homepage": "https://github.com/akari1910/react-native-simple-crypto",
   "license": "MIT",
   "keywords": [
     "react-native",
@@ -26,10 +26,10 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ghbutton/react-native-simple-crypto.git"
+    "url": "https://github.com/akari1910/react-native-simple-crypto.git"
   },
   "bugs": {
-    "url": "https://github.com/ghbutton/react-native-simple-crypto/issues"
+    "url": "https://github.com/akari1910/react-native-simple-crypto"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
